[package]
name = "bevy_ui_slider"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
  "bevy_ui",
  "zstd",
] }
thiserror = "1.0.40"

[dev-dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "x11",
] }
